# opengl

./: CMakeLists.txt  README.md  main.cpp
res/shaders/: Basic.shader
